[gd_scene load_steps=2 format=3 uid="uid://1ievs7t1qkpw"]

[ext_resource type="Script" uid="uid://bacts77vccdde" path="res://scripts/ui/enemy_ui.gd" id="1_eyis1"]

[node name="EnemyUI" type="Control"]
custom_minimum_size = Vector2(128, 192)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 192.0
script = ExtResource("1_eyis1")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedPanel" type="Panel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsRLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -56.0
grow_vertical = 0
text = "Здровье:
Щит:
Эффекты:"

[node name="EffectsLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 128.0
offset_bottom = 232.0
text = "[Effect list]"

[node name="IntentionRLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_top = 32.0
offset_right = 128.0
offset_bottom = 64.0
text = "Intention"

[node name="NameLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 32.0
text = "Name"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -192.0
offset_right = 64.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
